--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - 3.5
   - 3.6
-install: pip install flake8
+install: pip install flake8 mypy
 script:
   - flake8
+  - mypy ./polybot --ignore-missing-imports
