--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           python-version: '3.9'
       - run: |
+          pip install wheel
           pip install -r ./dev-requirements.txt
           black --check ./polybot
           flake8 ./polybot
