--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -14,7 +14,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: |
+      - name: Run tests
+        run: |
           pip install wheel
           pip install -r ./dev-requirements.txt
           black --check ./polybot
