--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,25 +24,19 @@ jobs:
 
   build:
     runs-on: ubuntu-22.04
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     needs: test
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Login to container registry
+        uses: docker/login-action@v2
+        with:
+            registry: ghcr.io
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build
-        run: docker build . --tag $IMAGE_NAME
-
-      - name: Push image to GitHub Container Registry
-        if: github.ref == 'refs/heads/main'
-        run: |
-          echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
-
-          IMAGE_ID=ghcr.io/${{ github.repository }}
-
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=${{ github.sha }}
-
-          docker tag $IMAGE_NAME $IMAGE_ID:${{ github.sha }}
-          docker push $IMAGE_ID:${{ github.sha }}
-          docker tag $IMAGE_NAME $IMAGE_ID:latest
-          docker push $IMAGE_ID:latest
+      - name: Build and push production container
+        uses: docker/build-push-action@v4
+        with:
+            push: true
+            tags: ghcr.io/russss/polybot:latest
