--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
 dependencies = [
     "atproto>=0.0.55",
     "mastodon-py>=1.8.1",
+    "pillow>=11.0.0",
     "requests>=2.32.3",
     "tweepy>=4.14.0",
 ]
@@ -22,8 +23,4 @@ dependencies = [
 Homepage = "https://github.com/russss/polybot"
 
 [dependency-groups]
-dev = [
-    "mypy>=1.13.0",
-    "ruff>=0.8.1",
-    "types-requests>=2.32.0.20241016",
-]
+dev = ["mypy>=1.13.0", "ruff>=0.8.1", "types-requests>=2.32.0.20241016"]
