--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ classifiers = [
 ]
 dependencies = [
     "atproto>=0.0.55",
+    "httpx>=0.27.2",
     "mastodon-py>=1.8.1",
     "pillow>=11.0.0",
-    "requests>=2.32.3",
     "tweepy>=4.14.0",
 ]
 
@@ -23,12 +23,7 @@ dependencies = [
 Homepage = "https://github.com/russss/polybot"
 
 [dependency-groups]
-dev = [
-    "mypy>=1.13.0",
-    "ruff>=0.8.1",
-    "types-requests>=2.32.0.20241016",
-    "pytest>=8.3.4",
-]
+dev = ["mypy>=1.13.0", "ruff>=0.8.1", "pytest>=8.3.4"]
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
