--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,14 @@ dev = ["mypy>=1.13.0", "ruff>=0.8.1", "pytest>=8.3.4"]
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
+
+[tool.ruff]
+line-length = 110
+
+[tool.ruff.lint]
+select = ["E", "F", "UP", "I"]
+
+[tool.ruff.format]
+quote-style = "single"
+indent-style = "tab"
+docstring-code-format = true
